Mostly working with some alignment and font issues still

--- a/assets/css/flex.css
+++ b/assets/css/flex.css
@@ -7,21 +7,29 @@ body {
     font-family: "Arial, Helvetica Neue, Helvetica, sans-serif";
 }
 
-#headerarea {
-    height: calc(10% - 3px); 
+#headerbar {
+    /* height: calc(10% - 3px); */
+    height: 10%; 
     width: 100%;
     background-color: white; 
     border-color: #ccc;
     border-style: none none solid none; 
     border-width: 3px; 
-    position: fixed; 
+    /* position: fixed; */ 
     margin: 0;
     left: 0;
 }
 
+#headercontent {
+    display: flex;
+    justify-content: space-between;
+    width: 920px; 
+    margin: 0 auto; 
+}
 
-h1 {
-    font-family: "Georgia, Times, Times New Roman, serif"; 
+
+
+h1 {    font-family: "Georgia, Times, Times New Roman, serif"; 
     color: white;
     background-color: #4aaaa5; 
 }
@@ -40,15 +48,13 @@ h2 {
     font-size: 24px;
     color: white;
     background-color: #4aaaa5; 
-    position: fixed;
-    top: 0; 
-    * same margin as content once that is calculated
-    left: calc(calc(100% - 1000px) / 2);  
-    height: calc( 10% - 15px);
-    padding: 20px 20px; 
+    align-content: flex-end;
+    width: 30%;
+    padding: 20px 30px; 
     text-align: center;
 
 }
+
 
 #menu {
     color: #777;
