--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,61 @@
 body {
     color: #777777;
-    width: 1000px; 
     min-height: 100%;
-    margin-left, margin-right: calc((100% - 1000px) / 2);
-    padding: 20px;
+    margin: 0px;
+    padding: 0px;
     font-family: "Arial, Helvetica Neue, Helvetica, sans-serif";
 }
 
-#headerarea {
-    height: calc(10% - 3px); 
+#headerbar {
+    /* height: calc(10% - 3px); */
+    height: 10%; 
     width: 100%;
     background-color: white; 
     border-color: #ccc;
     border-style: none none solid none; 
     border-width: 3px; 
-    position: fixed; 
+    /* position: fixed; */ 
     margin: 0;
     left: 0;
+}
+
+#headercontent {
+    display: flex;
+    justify-content: space-between;
+    width: 920px; 
+    margin: 0 auto; 
+}
+
+#tab {
+    font-family: "Georgia, Times, Times New Roman, serif"; 
+    font-size: 24px;
+    color: white;
+    background-color: #4aaaa5; 
+    width: 30%;
+    padding: 20px 30px; 
+    text-align: center;
+
+}
+
+#navbar {
+    color: #777;
+    height: 10%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-content: flex-end;
+    width: 30%; 
+    font-family: "Arial, Helvetica Neue, Helvetica, sans-serif";
+}
+
+a {
+    color: #777;
+    text-decoration: none;
+    font-family: "Arial, Helvetica Neue, Helvetica, sans-serif";
+} 
+
+a:hover {
+    text-decoration: underline;
 }
 
 
@@ -33,40 +72,6 @@ h2 {
     border-style:  none none solid none; 
     border-width: 3px;
     padding: 10px 0px; 
-}
-
-#tab {
-    font-family: "Georgia, Times, Times New Roman, serif"; 
-    font-size: 24px;
-    color: white;
-    background-color: #4aaaa5; 
-    position: fixed;
-    top: 0; 
-    * same margin as content once that is calculated
-    left: calc(calc(100% - 1000px) / 2);  
-    height: calc( 10% - 15px);
-    padding: 20px 20px; 
-    text-align: center;
-
-}
-
-#menu {
-    color: #777;
-    height: 10%;
-    position: fixed;
-    right: 0; 
-    width: 30%; 
-
-}
-
-a {
-    color: #777;
-    text-decoration: none;
-    font-family: "Arial, Helvetica Neue, Helvetica, sans-serif";
-} 
-
-a:hover {
-    text-decoration: underline;
 }
     
 
@@ -92,26 +97,28 @@ footer {
 }
 
 .backwall {
-    background-image: url("../images/greekvase.png");
+    background-image: url("../images/light-grey-terrazzo.png");
     background-repeat: no-repeat;
     background-size:cover;
     width: 100%;
     height: calc(90% - 20px);
     position: fixed;
-    top: calc(15% + 3px);
+    top: 7%;
 }
 
 
+
 #content {
-    width: 960px;
+    width: 920px;
     margin: 0px auto;  
     padding: 20px;
-    position: fixed; 
-    top: 20%; 
+    position: relative; 
+    top: 10%; 
     background: white; 
     
 }
 
+/*
    * Teal color (used for headings and backgrounds): `#4aaaa5`
    * Regular font color (used for paragraphs and all text besides the headings): `#777777`
    * Main header background color: `#ffffff`
@@ -119,3 +126,4 @@ footer {
    * Footer background color: `#666666`
    * Main content background color: `#ffffff`
    * Main content border color: `#dddddd`
+   */
